se agregaron iconos adicionales

--- a/view/editorView.mustache
+++ b/view/editorView.mustache
@@ -28,7 +28,7 @@
 
                         <form action="/editor/eliminarPregunta" method="POST" style="display: inline;" onsubmit="return confirm('¿Estás seguro de que deseas eliminar esta pregunta?');">
                             <input type="hidden" name="id" value="{{id}}">
-                            <button type="submit" class="btn btn-danger">Eliminar</button>
+                            <button type="submit" class="btn btn-danger me-2">Eliminar</button>
                         </form>
 
                         {{#sugeridas}}
