--- a/view/header.mustache
+++ b/view/header.mustache
@@ -84,9 +84,12 @@
                         <a class="btn btn-secondary d-lg-none ms-2" href="/usuario/logout">
                             <img src="../public/icons/logout.svg" alt="logout" width="24">
                         </a>
-                        <a class="btn btn-secondary d-none d-lg-inline mb-0 ms-4" href="/usuario/logout">
+                    <div class="d-flex align-items-center">
+                        <a class="btn btn-secondary d-none d-lg-inline mb-0 ms-4 d-flex align-items-center" href="/usuario/logout">
+                            <img src="../public/icons/logout.svg" alt="logout" width="24">
                             Cerrar Sesión
                         </a>
+                    </div>
                     {{/logged_in}}
                 </div>
             </div>
