--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -11,8 +11,10 @@
                 <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <div class="d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Ingresar</button>
-                <button type="button" class="btn btn-success" onclick="window.location.href='/usuario/registrar'">Registrarse</button>
+                <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center">
+                    <img class="me-1" src="../public/icons/login.svg" alt="login" width="24">Ingresar</button>
+                <button type="button" class="btn btn-success d-flex align-items-center justify-content-center" onclick="window.location.href='/usuario/registrar'">
+                    <img class="me-1" src="../public/icons/person_add.svg" alt="person_add" width="24">Registrarse</button>
             </div>
             {{#error}}
                 <div class="alert alert-danger mt-4" role="alert">
