--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -20,7 +20,7 @@
                         <td><p>{{ranking}}</p></td>
                         <td>
                             <form method="post" action="/usuario/verPerfilJugadores">
-                                <button type="submit" class="btn text-primary" name="usuario"
+                                <button type="submit" class="btn btn-link" name="usuario"
                                         value="{{nombre_usuario}}">{{nombre_usuario}}</button>
                             </form>
                         </td>
