--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -4,7 +4,7 @@
         <form method="POST" action="/usuario/auth">
             <div class="mb-3">
                 <label for="username" class="form-label">Usuario</label>
-                <input type="text" class="form-control" id="username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Usuario" required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Clave</label>
