solucion de erroes

--- a/view/partidaNuevaView.mustache
+++ b/view/partidaNuevaView.mustache
@@ -37,10 +37,10 @@
         {{#respuestaDada}}
             <div class="result-container mt-4">
                 {{#correcta}}
-                    <div class="alert alert-success" role="alert">
+                    <div class="alert alert-success text-center" role="alert">
                         ¡Felicidades, acertaste!
                     </div>
-                    <div class="alert alert-info" role="alert">
+                    <div class="alert alert-info text-center" role="alert">
                         +1 Punto - Tu puntaje: {{puntaje}}
                     </div>
                     <div class="mt-4">
@@ -64,10 +64,10 @@
                     </div>
                 {{/correcta}}
                 {{^correcta}}
-                    <div class="alert alert-danger" role="alert">
+                    <div class="alert alert-danger text-center" role="alert">
                         Perdiste, intenta de nuevo
                     </div>
-                    <div class="alert alert-info" role="alert">
+                    <div class="alert alert-info text-center" role="alert">
                         Tu puntaje final es: {{puntaje}}
                     </div>
                     <div class="mt-4">
