--- a/view/crearPreguntaView.mustache
+++ b/view/crearPreguntaView.mustache
@@ -1,17 +1,17 @@
 <div class="container my-5">
     <div class="form-container">
         {{#error}}
-            <div class="alert alert-danger" role="alert">
+            <div class="alert alert-danger text-center" role="alert">
                 {{error}}
             </div>
         {{/error}}
         {{#success}}
-            <div class="alert alert-success" role="alert">
+            <div class="alert alert-success text-center" role="alert">
                 {{success}}
             </div>
         {{/success}}
         <h2 class="text-center mb-4">Crear Pregunta</h2>
-        <form method="post" action="/crearpreguntas/crear" id="formPreguntas">
+        <form method="post" action="/crearPreguntas/crear" id="formPreguntas">
 
             <div class="mb-3">
                 <label for="pregunta" class="form-label">Pregunta</label>
