--- a/view/editarPreguntaView.mustache
+++ b/view/editarPreguntaView.mustache
@@ -55,7 +55,12 @@
             </select>
         </div>
 
+        <div>
         <button type="submit" class="btn btn-primary">Actualizar Pregunta</button>
+        <button type="button" class="btn btn-secondary mx-2"
+                onclick="window.location.href='/editor/verPreguntas'">Volver
+        </button>
+        </div>
     </form>
 </div>
 
