--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -38,7 +38,7 @@
             <div class="mb-3">
                 <label for="sexo" class="form-label">Sexo</label>
                 <select class="form-select" id="sexo" name="sexo" required>
-                    <option value="">Selecciona tu sexo</option>
+                    <option value="" selected disabled>Selecciona tu sexo</option>
                     <option value="M">Masculino</option>
                     <option value="F">Femenino</option>
                     <option value="O">Otro</option>
