--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -76,6 +76,12 @@
                          style="filter: invert(1);">
                     Crear Pregunta
                 </button>
+                <button type="button" class="btn btn-info d-flex align-items-center justify-content-center"
+                        onclick="window.location.href='/editor/verPreguntasEliminadas'">
+                    <img class="me-1" src="../public/icons/basurero.svg" alt="report" width="20">
+                    Preguntas Eliminadas
+                </button>
+
             </div>
         </div>
     {{/editor}}
