--- a/view/header.mustache
+++ b/view/header.mustache
@@ -10,6 +10,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <link href="../public/css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
+
 </head>
 <body class="d-flex flex-column min-vh-100">
 <header class="header-gradient">
@@ -43,13 +45,15 @@
                             {{/logged_in}}
                             <li>
                                 <div class="form-check form-switch d-flex align-items-center justify-content-center gap-2">
-                                    <i class="bi bi-sun" id="sun-icon"></i>
+                                    <!--<i class="bi bi-sun" id="sun-icon"></i>-->
+                                    <i class="material-symbols-outlined" id="sun-icon">light_mode</i>
                                     <input
                                             class="form-check-input theme-switch"
                                             type="checkbox"
                                             id="themeSwitch"
                                             style="margin: 0;">
-                                    <i class="bi bi-moon" id="moon-icon"></i>
+                                    <!--<i class="bi bi-moon" id="moon-icon"></i>-->
+                                    <i class="material-symbols-outlined" id="moon-icon">dark_mode</i>
                                 </div>
                             </li>
                         </ul>
@@ -68,21 +72,25 @@
                 <div class="d-flex align-items-center ms-auto me-1">
                     <!-- Switch modo claro y oscuro -->
                     <div class="form-check form-switch d-none d-lg-flex align-items-center justify-content-center gap-2">
-                        <i class="bi bi-sun" id="sun-icon"></i>
+                        <!--<i class="bi bi-sun" id="sun-icon"></i>-->
+                        <i class="material-symbols-outlined" id="sun-icon">light_mode</i>
                         <input
                                 class="form-check-input theme-switch"
                                 type="checkbox"
                                 id="themeSwitch"
                                 style="margin: 0;">
-                        <i class="bi bi-moon" id="moon-icon"></i>
+                        <!--<i class="bi bi-moon" id="moon-icon"></i>-->
+                        <i class="material-symbols-outlined" id="moon-icon">dark_mode</i>
                     </div>
                     {{#logged_in}}
                         <a class="btn btn-secondary d-lg-none ms-2" href="/usuario/logout">
-                            <img src="../public/icons/logout.svg" alt="logout" width="24">
+                            <!--<img src="../public/icons/logout.svg" alt="logout" width="24">-->
+                            <i class="material-symbols-outlined align-middle">logout</i>
                         </a>
-                    <div class="d-flex align-items-center">
-                        <a class="btn btn-secondary d-none d-lg-inline mb-0 ms-4 d-flex align-items-center" href="/usuario/logout">
-                            <img src="../public/icons/logout.svg" alt="logout" width="24">
+                    <div class="d-none d-lg-inline mb-0 ms-4">
+                        <a class="btn btn-secondary d-flex align-items-center" href="/usuario/logout">
+                            <!--<img src="../public/icons/logout.svg" alt="logout" width="24">-->
+                            <i class="material-symbols-outlined me-1">logout</i>
                             Cerrar Sesión
                         </a>
                     </div>
