--- a/view/homeView.mustache
+++ b/view/homeView.mustache
@@ -12,21 +12,24 @@
          style="max-width: 200px;">
         <button type="button" class="btn btn-danger mb-3 w-100 d-flex align-items-center justify-content-center"
                 onclick="window.location.href='/usuario/verPerfil'">
-            <img class="me-1" src="../public/icons/person.svg" alt="person" width="24">
+            <!--<img class="me-1" src="../public/icons/person.svg" alt="person" width="24">-->
+            <i class="material-symbols-outlined me-1">person</i>
             Ver perfil
         </button>
         <button type="button" class="btn btn-primary mb-3 w-100" id="nueva_partida"
                 onclick="window.location.href='/partida/nueva'">
-            <span><img class="me-1" src="../public/icons/game.svg" alt="game" width="24">Nueva partida</span>
+            <span><i class="material-symbols-outlined me-1">sports_esports</i>Nueva partida</span>
         </button>
         <button type="button" class="btn btn-success mb-3 w-100 d-flex align-items-center justify-content-center"
                 onclick="window.location.href='/partida/ranking'">
-            <img class="me-1" src="../public/icons/leaderboard.svg" alt="leaderboard" width="24">
+            <!--<img class="me-1" src="../public/icons/leaderboard.svg" alt="leaderboard" width="24">-->
+            <i class="material-symbols-outlined me-1">leaderboard</i>
             Ver ranking de usuarios
         </button>
         <button type="button" class="btn btn-info mb-3 w-100 d-flex align-items-center justify-content-center"
                 onclick="window.location.href='/crearPreguntas/form'">
-            <img class="me-0" src="../public/icons/list_add.svg" alt="list_add" width="24">
+            <!--<img class="me-0" src="../public/icons/list_add.svg" alt="list_add" width="24">-->
+            <i class="material-symbols-outlined me-1">list_alt_add</i>
             Crear Pregunta
         </button>
 
@@ -36,11 +39,13 @@
             <div class="d-grid gap-1">
                 <button type="button" class="btn btn-danger mb-3 w-100 d-flex align-items-center justify-content-center"
                         onclick="window.location.href='/usuario/verPerfil'">
-                    <img class="me-1" src="../public/icons/person.svg" alt="person" width="24">
+                    <!--<img class="me-1" src="../public/icons/person.svg" alt="person" width="24">-->
+                    <i class="material-symbols-outlined me-1">person</i>
                     Ver perfil
                 </button>
                 <button type="button" class="btn btn-info d-flex align-items-center justify-content-center" onclick="window.location.href='/admin/informes'">
-                    <img class="me-1" src="../public/icons/monitoring.svg" alt="monitoring" width="24">
+                    <!--<img class="me-1" src="../public/icons/monitoring.svg" alt="monitoring" width="24">-->
+                    <i class="material-symbols-outlined me-1">monitoring</i>
                     Ir a informes
                 </button>
             </div>
@@ -52,28 +57,33 @@
             <div class="d-grid gap-1">
                 <button type="button" class="btn btn-danger mb-3 w-100 d-flex align-items-center justify-content-center"
                         onclick="window.location.href='/usuario/verPerfil'">
-                    <img class="me-1" src="../public/icons/person.svg" alt="person" width="24">
+                    <!--<img class="me-1" src="../public/icons/person.svg" alt="person" width="24">-->
+                    <i class="material-symbols-outlined me-1">person</i>
                     Ver perfil
                 </button>
                 <button type="button" class="btn btn-info d-flex align-items-center justify-content-center" onclick="window.location.href='/editor/verPreguntas'">
-                    <img class="me-1" src="../public/icons/list_alt.svg" alt="list_alt" width="24">
+                    <!--<img class="me-1" src="../public/icons/list_alt.svg" alt="list_alt" width="24">-->
+                    <i class="material-symbols-outlined me-1">list_alt</i>
                     Todas las Preguntas
                 </button>
                 <button type="button" class="btn btn-info d-flex align-items-center justify-content-center"
                         onclick="window.location.href='/editor/verPreguntasReportadas'">
-                    <img class="me-1" src="../public/icons/report.svg" alt="report" width="24">
+                    <!--<img class="me-1" src="../public/icons/report.svg" alt="report" width="24">-->
+                    <i class="material-symbols-outlined me-1">report</i>
                     Preguntas Reportdas
                 </button>
                 <button type="button" class="btn btn-info d-flex align-items-center justify-content-center"
                         onclick="window.location.href='/editor/verPreguntasSugeridas'">
-                    <img class="me-1" src="../public/icons/lightbulb.svg" alt="lightbulb" width="24">
+                    <!--<img class="me-1" src="../public/icons/lightbulb.svg" alt="lightbulb" width="24">-->
+                    <i class="material-symbols-outlined me-1">lightbulb</i>
                     Preguntas Sugeridas
                 </button>
                 <button type="button"
                         class="btn btn-success mb-3 w-100 d-flex align-items-center justify-content-center"
                         onclick="window.location.href='/crearPreguntas/form'">
-                    <img class="me-1" src="../public/icons/list_add.svg" alt="list_add" width="24"
-                         style="filter: invert(1);">
+                    <!--<img class="me-1" src="../public/icons/list_add.svg" alt="list_add" width="24"
+                         style="filter: invert(1);">-->
+                    <i class="material-symbols-outlined me-1">list_alt_add</i>
                     Crear Pregunta
                 </button>
             </div>
@@ -109,7 +119,8 @@
             </table>
             <button type="button" class="btn btn-warning w-100 d-flex align-items-center justify-content-center"
                     onclick="window.location.href='/usuario/historial'">
-                <img class="me-1" src="../public/icons/history.svg" alt="history" width="24">
+                <!--<img class="me-1" src="../public/icons/history.svg" alt="history" width="24">-->
+                <i class="material-symbols-outlined me-1">history</i>
                 Ver historial completo
             </button>
         </div>
