--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -32,12 +32,14 @@
                     <i class="material-symbols-outlined me-1">person_add</i>Registrarse</button>
             </div>
             {{#error}}
-                <div class="alert alert-danger mt-4" role="alert">
+                <div class="alert alert-danger mt-4 text-center" role="alert">
+                    <i class="bi bi-exclamation-triangle-fill me-2"></i>
                     {{error}}
                 </div>
             {{/error}}
             {{#success}}
-                <div class="alert alert-success mt-4" role="alert">
+                <div class="alert alert-success mt-4 d-flex align-items-center justify-content-center text-center" role="alert">
+                    <i class="bi bi-check-circle-fill me-2"></i>
                     {{success}}
                 </div>
             {{/success}}
