se agrego un puntero al hacer hover sobre el QR

--- a/view/rankingView.mustache
+++ b/view/rankingView.mustache
@@ -28,7 +28,7 @@
                         <td>
                             <img src="/usuario/verPerfilJugadores?qr=true&usuario={{nombre_usuario}}" alt="QR de perfil
                             de {{nombre_usuario}}" data-bs-toggle="modal"
-                            data-bs-target="#qrModal{{ranking}}" style="width: 100px; height: 100px;">
+                            data-bs-target="#qrModal{{ranking}}" style="width: 100px; height: 100px; cursor: pointer;">
                         </td>
                     </tr>
                 {{/rankings}}
