--- a/view/loginView.mustache
+++ b/view/loginView.mustache
@@ -2,34 +2,27 @@
     <div class="login-container shadow p-4 rounded">
         <h2 class="text-center mb-4">Iniciar Sesión</h2>
         <form method="POST" action="/usuario/auth">
-            <!--<div class="mb-3">
-                <label for="username" class="form-label">Usuario</label>
-                <input type="text" class="form-control" id="username" name="username" required>
-            </div>
-            <div class="mb-3">
-                <label for="password" class="form-label">Clave</label>
-                <input type="password" class="form-control" id="password" name="password" required>
-            </div>-->
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">
-                    <!--<img class="me-0" src="../public/icons/person.svg" alt="person" width="24" style="filter: invert(0.5)">-->
                     <i class="material-symbols-outlined">person</i>
                 </span>
                 <input type="text" class="form-control" placeholder="Usuario" id="username" name="username" required>
             </div>
             <div class="input-group mb-3">
                 <span class="input-group-text" id="basic-addon1">
-                    <!--<img class="me-0" src="../public/icons/key.svg" alt="key" width="24" style="filter: invert(0.5)">-->
                     <i class="material-symbols-outlined">key</i>
                 </span>
-                <input type="password" class="form-control" placeholder="Contraseña" id="password" name="password" required>
+                <input type="password" class="form-control" placeholder="Contraseña" id="password" name="password"
+                       required>
             </div>
             <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-primary d-flex align-items-center justify-content-center">
-                    <i class="material-symbols-outlined me-1">login</i>Ingresar</button>
-
-                <button type="button" class="btn btn-success d-flex align-items-center justify-content-center" onclick="window.location.href='/usuario/registrar'">
-                    <i class="material-symbols-outlined me-1">person_add</i>Registrarse</button>
+                    <i class="material-symbols-outlined me-1">login</i>Ingresar
+                </button>
+                <button type="button" class="btn btn-success d-flex align-items-center justify-content-center"
+                        onclick="window.location.href='/usuario/registrar'">
+                    <i class="material-symbols-outlined me-1">person_add</i>Registrarse
+                </button>
             </div>
             {{#error}}
                 <div class="alert alert-danger mt-4 text-center" role="alert">
@@ -38,7 +31,8 @@
                 </div>
             {{/error}}
             {{#success}}
-                <div class="alert alert-success mt-4 d-flex align-items-center justify-content-center text-center" role="alert">
+                <div class="alert alert-success mt-4 d-flex align-items-center justify-content-center text-center"
+                     role="alert">
                     <i class="bi bi-check-circle-fill me-2"></i>
                     {{success}}
                 </div>
