--- a/view/registrarView.mustache
+++ b/view/registrarView.mustache
@@ -45,12 +45,12 @@
             </div>
 
             <div class="mb-3">
-                <label for="birthyear" class="form-label">Año de Nacimiento</label>
+                <label for="birthyear" class="form-label">Fecha de Nacimiento</label>
                 <div class="input-group">
             <span class="input-group-text">
                 <i class="material-symbols-outlined">calendar_today</i>
             </span>
-                    <input type="date" class="form-control" id="birthyear" name="birthyear" min="1900" max="2024" required>
+                    <input type="date" class="form-control" id="birthyear" name="birthyear" min="1900-01-01" max="2024-12-31" required>
                 </div>
             </div>
 
